# collimatorClaude

./: .gitignore  CLAUDE.md  buildup_coefficients.json  file_format_spec.md  frd_collimator.md  gap-260212.md  gap-260212b.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  application.py  constants.py  main_window.py
app/core/: __init__.py  beam_simulation.py  build_up_factors.py  compton_engine.py  dose_calculator.py  i18n.py  isodose_engine.py  klein_nishina_sampler.py  material_database.py  physics_engine.py  projection_engine.py  ray_tracer.py  scatter_tracer.py  serializers.py  units.py  (+3 more)
data/: tube_output_table.json  xray_targets.json
docs/: phase-01-infrastructure.md  phase-02-physics-engine.md  phase-03-canvas-editor.md  phase-04-ray-tracing.md  phase-05-visualization.md  phase-06-design-management.md  phase-07-scatter-ray-tracing.md  phase-08-polish-packaging.md
oldies/: 1_5mm-goz-backscatter 225kV-3_9mmFC.json
tests/: __init__.py  test_buildup.py  test_charts.py  test_composite_layer.py  test_compton.py  test_context_menu.py  test_design_repository.py  test_dose_calculator.py  test_export.py  test_external_import.py  test_geometry.py  test_geometry_controller.py  test_geometry_templates.py  test_i18n.py  test_isodose.py  test_materials.py  test_nist_xcom_validation.py  test_phantom_controller.py  test_physics_engine.py  test_projection_engine.py  test_ray_tracer.py  test_scatter.py  test_serializers.py  test_simulation.py  test_spectrum.py  test_undo_redo.py  test_units.py  test_validation.py
translations/: de.json  en.json  tr.json
(+92 files in other folders)
